# ChangeLog for media-gfx/blender
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/blender/ChangeLog,v 1.123 2007/09/21 23:14:57 lu_zero Exp $

*blender-2.45 (21 Sep 2007)

  21 Sep 2007; Luca Barbato <lu_zero@gentoo.org> +blender-2.45.ebuild:
  New version, as requested in bug #193317

  19 Sep 2007; Luca Barbato <lu_zero@gentoo.org> blender-2.44-r1.ebuild:
  Update internal ffmpeg lib

*blender-2.44-r1 (19 Sep 2007)

  19 Sep 2007; Luca Barbato <lu_zero@gentoo.org>
  files/blender-2.44-swscale.patch, +blender-2.44-r1.ebuild:
  Patch update and ebuild fixes by Martin Capitanio <gentoo-bug@capitanio.org>

  30 Aug 2007; Bernard Cafarelli <voyageur@gentoo.org> blender-2.44.ebuild:
  Compilation fix for python versions other than 2.4, closes bug #152700

  07 Aug 2007; Luca Barbato <lu_zero@gentoo.org>
  +files/blender-2.44-swscale.patch, blender-2.44.ebuild:
  make blender use swscale

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>;
  blender-2.41-r1.ebuild, blender-2.42.ebuild, blender-2.42a-r1.ebuild,
  blender-2.43.ebuild, blender-2.44.ebuild:
  Drop virtual/x11 references.

  15 Jul 2007; Luca Barbato <lu_zero@gentoo.org> blender-2.44.ebuild:
  Add verse support as requested in bug #173124

  15 Jul 2007; Luca Barbato <lu_zero@gentoo.org>
  +files/blender-2.44-scriptsdir.patch, blender-2.44.ebuild:
  make scriptsdir behaviour a little different

*blender-2.44 (17 May 2007)

  17 May 2007; Luca Barbato <lu_zero@gentoo.org> +blender-2.44.ebuild:
  New ebuild contributed by Cornelius Weig
  <bitte.keine.werbung.einwerfen@googlemail.com>, Daniel Genrich
  <daniel.genrich@gmx.net> and mattepiu

  17 Apr 2007; Tobias Scherbaum <dertobi123@gentoo.org> blender-2.43.ebuild:
  ppc stable, bug #168907

  16 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org> blender-2.43.ebuild:
  Again ~sparc

  15 Apr 2007; Markus Rothe <corsair@gentoo.org> blender-2.43.ebuild:
  Stable on ppc64; bug #168907
